Add github link

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,6 @@
     <body id="popup">
         <p>A simple extension to show property sale price history on RightMove search page.</p>
 
-        <p>Created by <a href="https://luke-sheppard.com" target="_blank">https://luke-sheppard.com</a></p>
+        <p>Created by <a href="https://luke-sheppard.com" target="_blank">https://luke-sheppard.com</a>, <a href="https://github.com/Luke-Shepp/rightmove-sale-history" target="_blank">GitHub</a></a></p>
     </body>
 </html>
